--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
     "mode":3,
     "user_id":"null",
-    "cookie":"lang=id; ndus=YvZNLrCteHuiHhOL5JkRGyt7mwk2eJ0crYm0-ZBu;"
+    "cookie":"lang=en; ndus=YvZNLrCteHuiHhOL5JkRGyt7mwk2eJ0crYm0;"
 }
